midpoint-live-demo/objects/apache/apache-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: apache
  type: ClusterIP
  sessionAffinity: None
